# satsuma

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.claude/: settings.local.json
examples/: loader.cpp  remote_loader.cpp  test_dll.cpp
extlibs/: CMakeLists.txt
include/satsuma/: Injector.h  ManualMapInjector.h  xorstr.h
source/: CMakeLists.txt  Injector.cpp  ManualMapInjector.cpp
